# flupy

./: .gitignore  Cargo.toml  LICENCE  README.md  SECURITY.md  fix_payment_rs_doc_paths.py  makefile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sync-root.sh
contracts/: Cargo.toml  README.md
contracts/src/: errors.rs  lib.rs  payment.rs  test.rs  types.rs  vk.rs
contracts/src/verifier/: bn254_demo.rs  bn254_native.rs  mod.rs  types.rs  vk_constants.rs
contracts/test_snapshots/test/: test_admin_can_rotate_operator.1.json  test_admin_can_still_update_merkle_root_directly.1.json  test_admin_can_update_merkle_root.1.json  test_circuit_breaker_pause_logic.1.json  test_constructor_guard_sets_admin_immutably.1.json  test_constructor_sets_correct_state.1.json  test_custom_fee_applied_correctly.1.json  test_double_init_panics.1.json  test_double_init_panics.2.json  test_fee_above_cap_rejected.1.json  test_get_root_operator_returns_current_operator.1.json  test_initialization.1.json  test_initialize_and_pause.1.json  test_non_admin_cannot_pause.1.json  test_non_admin_non_operator_cannot_update_root.1.json  test_nullifier_replay_rejected.1.json  test_operator_can_update_merkle_root.1.json  test_operator_cannot_rotate_operator.1.json  test_operator_cannot_set_fee.1.json  test_pause_blocks_payments.1.json  test_pay_with_zk_success.1.json  test_payment_marks_nullifier_spent.1.json  test_root_outside_history_window_rejected.1.json  test_root_update_blocks_old_root_proofs.1.json  test_root_within_history_window_still_accepted.1.json  test_small_payment_split_precision.1.json  (+6 more)
(+111 files in other folders)
